[package]
name = "http-healthcheck-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
url = { version = "2.2.2" }
reqwest = { version = "0.11.10", features = ["blocking"] }
